project(skia_osmand)

include("../../common.cmake")

set(ROOT "${OSMAND_ROOT}/externals/skia")
set(UPSTREAM "${ROOT}/upstream.patched")
include_directories(AFTER SYSTEM
	"${UPSTREAM}/src/core"
	"${UPSTREAM}/src/config"
	"${UPSTREAM}/src/effects"
	"${UPSTREAM}/src/fonts"
	"${UPSTREAM}/src/image"
	"${UPSTREAM}/src/images"
	"${UPSTREAM}/src/lazy"
	"${UPSTREAM}/src/ports"
	"${UPSTREAM}/src/utils"
	"${UPSTREAM}/src/xml"
	"${UPSTREAM}/src/sfnt"
	"${UPSTREAM}/src/gpu"
	"${UPSTREAM}/src/opts"
	"${UPSTREAM}/include/core"
	"${UPSTREAM}/include/lazy"
	"${UPSTREAM}/include/pathops"
	"${UPSTREAM}/src/core"
	"${UPSTREAM}/include/config"
	"${UPSTREAM}/include/effects"
	"${UPSTREAM}/include/images"
	"${UPSTREAM}/include/pipe"
	"${UPSTREAM}/include/ports"
	"${UPSTREAM}/include/utils"
	"${UPSTREAM}/include/xml"
	"${UPSTREAM}/include/gpu"
	"${OSMAND_ROOT}/externals/expat/upstream.patched/lib"
	"${OSMAND_ROOT}/externals/freetype/upstream.patched/include"
	"${OSMAND_ROOT}/externals/giflib/upstream.patched/lib"
	"${OSMAND_ROOT}/externals/jpeg/upstream.patched"
	"${OSMAND_ROOT}/externals/libpng/upstream.patched"
)
add_definitions(-DSK_RELEASE -DSK_IGNORE_ETC1_SUPPORT -DSK_SUPPORT_GPU=0)
set(target_specific_sources
	"${UPSTREAM}/src/opts/SkBitmapProcState_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkBlitMask_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkBlitRow_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkBlurImage_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkMorphology_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkTextureCompression_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkUtils_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkXfermode_opts_none.cpp"
)

if(CMAKE_TARGET_OS STREQUAL "linux")
	set(target_specific_sources "${target_specific_sources}"
		"${UPSTREAM}/src/fonts/SkFontMgr_fontconfig.cpp"
		"${UPSTREAM}/src/ports/SkDebug_stdio.cpp"
		"${UPSTREAM}/src/ports/SkDiscardableMemory_none.cpp"
		"${UPSTREAM}/src/ports/SkFontConfigInterface_direct.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_fontconfig.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_FreeType_common.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_FreeType.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_linux.cpp"
		"${UPSTREAM}/src/ports/SkOSFile_posix.cpp"
		"${UPSTREAM}/src/ports/SkTime_Unix.cpp"
		"${UPSTREAM}/src/ports/SkTLS_pthread.cpp"
		"${UPSTREAM}/src/utils/SkThreadUtils_pthread.cpp"
		"${UPSTREAM}/src/utils/SkThreadUtils_pthread_linux.cpp"
	)
	add_definitions(-DSK_BUILD_FOR_UNIX -DSK_USE_POSIX_THREADS)
endif()
if(CMAKE_COMPILER_FAMILY STREQUAL "gcc" OR CMAKE_COMPILER_FAMILY STREQUAL "clang")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fno-rtti -fno-exceptions")
endif()

add_library(skia_osmand STATIC
	"${UPSTREAM}/src/core/SkAAClip.cpp"
	"${UPSTREAM}/src/core/SkAdvancedTypefaceMetrics.cpp"
	"${UPSTREAM}/src/core/SkAlphaRuns.cpp"
	"${UPSTREAM}/src/core/SkAnnotation.cpp"
	"${UPSTREAM}/src/core/SkBBHFactory.cpp"
	"${UPSTREAM}/src/core/SkBitmap.cpp"
	"${UPSTREAM}/src/core/SkBitmapCache.cpp"
	"${UPSTREAM}/src/core/SkBitmapDevice.cpp"
	"${UPSTREAM}/src/core/SkBitmapFilter.cpp"
	"${UPSTREAM}/src/core/SkBitmapHeap.cpp"
	"${UPSTREAM}/src/core/SkBitmapProcShader.cpp"
	"${UPSTREAM}/src/core/SkBitmapProcState.cpp"
	"${UPSTREAM}/src/core/SkBitmapProcState_matrixProcs.cpp"
	"${UPSTREAM}/src/core/SkBitmapScaler.cpp"
	"${UPSTREAM}/src/core/SkBitmap_scroll.cpp"
	"${UPSTREAM}/src/core/SkBlitMask_D32.cpp"
	"${UPSTREAM}/src/core/SkBlitRow_D16.cpp"
	"${UPSTREAM}/src/core/SkBlitRow_D32.cpp"
	"${UPSTREAM}/src/core/SkBlitter.cpp"
	"${UPSTREAM}/src/core/SkBlitter_A8.cpp"
	"${UPSTREAM}/src/core/SkBlitter_ARGB32.cpp"
	"${UPSTREAM}/src/core/SkBlitter_RGB16.cpp"
	"${UPSTREAM}/src/core/SkBlitter_Sprite.cpp"
	"${UPSTREAM}/src/core/SkBuffer.cpp"
	"${UPSTREAM}/src/core/SkCachedData.cpp"
	"${UPSTREAM}/src/core/SkCanvas.cpp"
	"${UPSTREAM}/src/core/SkChunkAlloc.cpp"
	"${UPSTREAM}/src/core/SkClipStack.cpp"
	"${UPSTREAM}/src/core/SkColor.cpp"
	"${UPSTREAM}/src/core/SkColorFilter.cpp"
	"${UPSTREAM}/src/core/SkColorTable.cpp"
	"${UPSTREAM}/src/core/SkComposeShader.cpp"
	"${UPSTREAM}/src/core/SkConfig8888.cpp"
	"${UPSTREAM}/src/core/SkConvolver.cpp"
	"${UPSTREAM}/src/core/SkCubicClipper.cpp"
	"${UPSTREAM}/src/core/SkData.cpp"
	"${UPSTREAM}/src/core/SkDataTable.cpp"
	"${UPSTREAM}/src/core/SkDebug.cpp"
	"${UPSTREAM}/src/core/SkDeque.cpp"
	"${UPSTREAM}/src/core/SkDevice.cpp"
	"${UPSTREAM}/src/core/SkDeviceLooper.cpp"
	"${UPSTREAM}/src/core/SkDeviceProfile.cpp"
	"${UPSTREAM}/src/core/SkDistanceFieldGen.cpp"
	"${UPSTREAM}/src/core/SkDither.cpp"
	"${UPSTREAM}/src/core/SkDraw.cpp"
	"${UPSTREAM}/src/core/SkDrawLooper.cpp"
	"${UPSTREAM}/src/core/SkEdge.cpp"
	"${UPSTREAM}/src/core/SkEdgeBuilder.cpp"
	"${UPSTREAM}/src/core/SkEdgeClipper.cpp"
	"${UPSTREAM}/src/core/SkError.cpp"
	"${UPSTREAM}/src/core/SkFilterProc.cpp"
	"${UPSTREAM}/src/core/SkFilterShader.cpp"
	"${UPSTREAM}/src/core/SkFlate.cpp"
	"${UPSTREAM}/src/core/SkFlattenable.cpp"
	"${UPSTREAM}/src/core/SkFlattenableSerialization.cpp"
	"${UPSTREAM}/src/core/SkFloatBits.cpp"
	"${UPSTREAM}/src/core/SkFont.cpp"
	"${UPSTREAM}/src/core/SkFontDescriptor.cpp"
	"${UPSTREAM}/src/core/SkFontHost.cpp"
	"${UPSTREAM}/src/core/SkFontStream.cpp"
	"${UPSTREAM}/src/core/SkForceCPlusPlusLinking.cpp"
	"${UPSTREAM}/src/core/SkGeometry.cpp"
	"${UPSTREAM}/src/core/SkGlyphCache.cpp"
	"${UPSTREAM}/src/core/SkGraphics.cpp"
	"${UPSTREAM}/src/core/SkImageFilter.cpp"
	"${UPSTREAM}/src/core/SkImageGenerator.cpp"
	"${UPSTREAM}/src/core/SkImageInfo.cpp"
	"${UPSTREAM}/src/core/SkInstCnt.cpp"
	"${UPSTREAM}/src/core/SkLineClipper.cpp"
	"${UPSTREAM}/src/core/SkLocalMatrixShader.cpp"
	"${UPSTREAM}/src/core/SkMallocPixelRef.cpp"
	"${UPSTREAM}/src/core/SkMask.cpp"
	"${UPSTREAM}/src/core/SkMaskCache.cpp"
	"${UPSTREAM}/src/core/SkMaskFilter.cpp"
	"${UPSTREAM}/src/core/SkMaskGamma.cpp"
	"${UPSTREAM}/src/core/SkMath.cpp"
	"${UPSTREAM}/src/core/SkMatrix.cpp"
	"${UPSTREAM}/src/core/SkMetaData.cpp"
	"${UPSTREAM}/src/core/SkMipMap.cpp"
	"${UPSTREAM}/src/core/SkMultiPictureDraw.cpp"
	"${UPSTREAM}/src/core/SkPackBits.cpp"
	"${UPSTREAM}/src/core/SkPaint.cpp"
	"${UPSTREAM}/src/core/SkPaintPriv.cpp"
	"${UPSTREAM}/src/core/SkPath.cpp"
	"${UPSTREAM}/src/core/SkPathEffect.cpp"
	"${UPSTREAM}/src/core/SkPathMeasure.cpp"
	"${UPSTREAM}/src/core/SkPathRef.cpp"
	"${UPSTREAM}/src/core/SkPicture.cpp"
	"${UPSTREAM}/src/core/SkPictureContentInfo.cpp"
	"${UPSTREAM}/src/core/SkPictureData.cpp"
	"${UPSTREAM}/src/core/SkPictureFlat.cpp"
	"${UPSTREAM}/src/core/SkPicturePlayback.cpp"
	"${UPSTREAM}/src/core/SkPictureRecord.cpp"
	"${UPSTREAM}/src/core/SkPictureRecorder.cpp"
	"${UPSTREAM}/src/core/SkPictureShader.cpp"
	"${UPSTREAM}/src/core/SkPixelRef.cpp"
	"${UPSTREAM}/src/core/SkPoint.cpp"
	"${UPSTREAM}/src/core/SkProcSpriteBlitter.cpp"
	"${UPSTREAM}/src/core/SkPtrRecorder.cpp"
	"${UPSTREAM}/src/core/SkQuadClipper.cpp"
	"${UPSTREAM}/src/core/SkRasterClip.cpp"
	"${UPSTREAM}/src/core/SkRasterizer.cpp"
	"${UPSTREAM}/src/core/SkReadBuffer.cpp"
	"${UPSTREAM}/src/core/SkRecordDraw.cpp"
	"${UPSTREAM}/src/core/SkRecorder.cpp"
	"${UPSTREAM}/src/core/SkRecordOpts.cpp"
	"${UPSTREAM}/src/core/SkRect.cpp"
	"${UPSTREAM}/src/core/SkRefDict.cpp"
	"${UPSTREAM}/src/core/SkRegion.cpp"
	"${UPSTREAM}/src/core/SkRegion_path.cpp"
	"${UPSTREAM}/src/core/SkResourceCache.cpp"
	"${UPSTREAM}/src/core/SkRRect.cpp"
	"${UPSTREAM}/src/core/SkRTree.cpp"
	"${UPSTREAM}/src/core/SkScalar.cpp"
	"${UPSTREAM}/src/core/SkScalerContext.cpp"
	"${UPSTREAM}/src/core/SkScan.cpp"
	"${UPSTREAM}/src/core/SkScan_Antihair.cpp"
	"${UPSTREAM}/src/core/SkScan_AntiPath.cpp"
	"${UPSTREAM}/src/core/SkScan_Hairline.cpp"
	"${UPSTREAM}/src/core/SkScan_Path.cpp"
	"${UPSTREAM}/src/core/SkShader.cpp"
	"${UPSTREAM}/src/core/SkSpriteBlitter_ARGB32.cpp"
	"${UPSTREAM}/src/core/SkSpriteBlitter_RGB16.cpp"
	"${UPSTREAM}/src/core/SkStream.cpp"
	"${UPSTREAM}/src/core/SkString.cpp"
	"${UPSTREAM}/src/core/SkStringUtils.cpp"
	"${UPSTREAM}/src/core/SkStroke.cpp"
	"${UPSTREAM}/src/core/SkStrokeRec.cpp"
	"${UPSTREAM}/src/core/SkStrokerPriv.cpp"
	"${UPSTREAM}/src/core/SkTaskGroup.cpp"
	"${UPSTREAM}/src/core/SkTextBlob.cpp"
	"${UPSTREAM}/src/core/SkTileGrid.cpp"
	"${UPSTREAM}/src/core/SkTLS.cpp"
	"${UPSTREAM}/src/core/SkTSearch.cpp"
	"${UPSTREAM}/src/core/SkTypeface.cpp"
	"${UPSTREAM}/src/core/SkTypefaceCache.cpp"
	"${UPSTREAM}/src/core/SkUnPreMultiply.cpp"
	"${UPSTREAM}/src/core/SkUtils.cpp"
	"${UPSTREAM}/src/core/SkUtilsArm.cpp"
	"${UPSTREAM}/src/core/SkValidatingReadBuffer.cpp"
	"${UPSTREAM}/src/core/SkVertState.cpp"
	"${UPSTREAM}/src/core/SkWriteBuffer.cpp"
	"${UPSTREAM}/src/core/SkWriter32.cpp"
	"${UPSTREAM}/src/core/SkXfermode.cpp"
	"${UPSTREAM}/src/effects/gradients/SkClampRange.cpp"
	"${UPSTREAM}/src/effects/gradients/SkGradientBitmapCache.cpp"
	"${UPSTREAM}/src/effects/gradients/SkGradientShader.cpp"
	"${UPSTREAM}/src/effects/gradients/SkLinearGradient.cpp"
	"${UPSTREAM}/src/effects/gradients/SkRadialGradient.cpp"
	"${UPSTREAM}/src/effects/gradients/SkSweepGradient.cpp"
	"${UPSTREAM}/src/effects/gradients/SkTwoPointConicalGradient.cpp"
	"${UPSTREAM}/src/effects/gradients/SkTwoPointConicalGradient_gpu.cpp"
	"${UPSTREAM}/src/effects/gradients/SkTwoPointRadialGradient.cpp"
	"${UPSTREAM}/src/effects/Sk1DPathEffect.cpp"
	"${UPSTREAM}/src/effects/Sk2DPathEffect.cpp"
	"${UPSTREAM}/src/effects/SkAlphaThresholdFilter.cpp"
	"${UPSTREAM}/src/effects/SkArcToPathEffect.cpp"
	"${UPSTREAM}/src/effects/SkArithmeticMode.cpp"
	"${UPSTREAM}/src/effects/SkAvoidXfermode.cpp"
	"${UPSTREAM}/src/effects/SkBitmapSource.cpp"
	"${UPSTREAM}/src/effects/SkBlurDrawLooper.cpp"
	"${UPSTREAM}/src/effects/SkBlurImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkBlurMask.cpp"
	"${UPSTREAM}/src/effects/SkBlurMaskFilter.cpp"
	"${UPSTREAM}/src/effects/SkColorCubeFilter.cpp"
	"${UPSTREAM}/src/effects/SkColorFilterImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkColorFilters.cpp"
	"${UPSTREAM}/src/effects/SkColorMatrix.cpp"
	"${UPSTREAM}/src/effects/SkColorMatrixFilter.cpp"
	"${UPSTREAM}/src/effects/SkComposeImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkCornerPathEffect.cpp"
	"${UPSTREAM}/src/effects/SkDashPathEffect.cpp"
	"${UPSTREAM}/src/effects/SkDiscretePathEffect.cpp"
	"${UPSTREAM}/src/effects/SkDisplacementMapEffect.cpp"
	"${UPSTREAM}/src/effects/SkDropShadowImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkEmbossMask.cpp"
	"${UPSTREAM}/src/effects/SkEmbossMaskFilter.cpp"
	"${UPSTREAM}/src/effects/SkGpuBlurUtils.cpp"
	"${UPSTREAM}/src/effects/SkLayerDrawLooper.cpp"
	"${UPSTREAM}/src/effects/SkLayerRasterizer.cpp"
	"${UPSTREAM}/src/effects/SkLerpXfermode.cpp"
	"${UPSTREAM}/src/effects/SkLightingImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkLumaColorFilter.cpp"
	"${UPSTREAM}/src/effects/SkMagnifierImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkMatrixConvolutionImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkMatrixImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkMergeImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkMorphologyImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkOffsetImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkPaintFlagsDrawFilter.cpp"
	"${UPSTREAM}/src/effects/SkPerlinNoiseShader.cpp"
	"${UPSTREAM}/src/effects/SkPictureImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkPixelXorXfermode.cpp"
	"${UPSTREAM}/src/effects/SkPorterDuff.cpp"
	"${UPSTREAM}/src/effects/SkRectShaderImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkTableColorFilter.cpp"
	"${UPSTREAM}/src/effects/SkTableMaskFilter.cpp"
	"${UPSTREAM}/src/effects/SkTestImageFilters.cpp"
	"${UPSTREAM}/src/effects/SkTileImageFilter.cpp"
	"${UPSTREAM}/src/effects/SkTransparentShader.cpp"
	"${UPSTREAM}/src/effects/SkXfermodeImageFilter.cpp"
	"${UPSTREAM}/src/image/SkImage.cpp"
	"${UPSTREAM}/src/image/SkImagePriv.cpp"
	"${UPSTREAM}/src/image/SkImage_Gpu.cpp"
	"${UPSTREAM}/src/image/SkImage_Raster.cpp"
	"${UPSTREAM}/src/image/SkSurface.cpp"
	"${UPSTREAM}/src/image/SkSurface_Gpu.cpp"
	"${UPSTREAM}/src/image/SkSurface_Raster.cpp"
	"${UPSTREAM}/src/images/bmpdecoderhelper.cpp"
	"${UPSTREAM}/src/images/SkDecodingImageGenerator.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_FactoryDefault.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_FactoryRegistrar.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_libbmp.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_libgif.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_libico.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_libjpeg.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_libpng.cpp"
	"${UPSTREAM}/src/images/SkImageDecoder_wbmp.cpp"
	"${UPSTREAM}/src/images/SkImageEncoder.cpp"
	"${UPSTREAM}/src/images/SkImageEncoder_argb.cpp"
	"${UPSTREAM}/src/images/SkImageEncoder_Factory.cpp"
	"${UPSTREAM}/src/images/SkJpegUtility.cpp"
	"${UPSTREAM}/src/images/SkMovie.cpp"
	"${UPSTREAM}/src/images/SkMovie_gif.cpp"
	"${UPSTREAM}/src/images/SkPageFlipper.cpp"
	"${UPSTREAM}/src/images/SkScaledBitmapSampler.cpp"
	"${UPSTREAM}/src/lazy/SkCachingPixelRef.cpp"
	"${UPSTREAM}/src/lazy/SkDiscardableMemoryPool.cpp"
	"${UPSTREAM}/src/lazy/SkDiscardablePixelRef.cpp"
	"${UPSTREAM}/src/sfnt/SkOTTable_name.cpp"
	"${UPSTREAM}/src/sfnt/SkOTUtils.cpp"
	"${UPSTREAM}/src/fonts/SkGScalerContext.cpp"
	"${UPSTREAM}/src/fonts/SkRemotableFontMgr.cpp"
	"${UPSTREAM}/src/pathops/SkAddIntersections.cpp"
	"${UPSTREAM}/src/pathops/SkDCubicIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDCubicLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDCubicToQuads.cpp"
	"${UPSTREAM}/src/pathops/SkDLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDQuadImplicit.cpp"
	"${UPSTREAM}/src/pathops/SkDQuadIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDQuadLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkIntersections.cpp"
	"${UPSTREAM}/src/pathops/SkOpAngle.cpp"
	"${UPSTREAM}/src/pathops/SkOpContour.cpp"
	"${UPSTREAM}/src/pathops/SkOpEdgeBuilder.cpp"
	"${UPSTREAM}/src/pathops/SkOpSegment.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsBounds.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsCommon.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsCubic.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsDebug.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsLine.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsOp.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsPoint.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsQuad.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsRect.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsSimplify.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsTightBounds.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsTriangle.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsTypes.cpp"
	"${UPSTREAM}/src/pathops/SkPathWriter.cpp"
	"${UPSTREAM}/src/pathops/SkQuarticRoot.cpp"
	"${UPSTREAM}/src/pathops/SkReduceOrder.cpp"
	"${UPSTREAM}/src/pipe/SkGPipeRead.cpp"
	"${UPSTREAM}/src/pipe/SkGPipeWrite.cpp"
	"${UPSTREAM}/src/pipe/utils/SamplePipeControllers.cpp"
	"${UPSTREAM}/src/ports/SkGlobalInitialization_default.cpp"
	"${UPSTREAM}/src/ports/SkMemory_malloc.cpp"
	"${UPSTREAM}/src/ports/SkOSFile_stdio.cpp"
	"${UPSTREAM}/src/ports/SkImageGenerator_skia.cpp"
	"${UPSTREAM}/src/utils/debugger/SkDebugCanvas.cpp"
	"${UPSTREAM}/src/utils/debugger/SkDrawCommand.cpp"
	"${UPSTREAM}/src/utils/debugger/SkObjectParser.cpp"
	"${UPSTREAM}/src/utils/SkBase64.cpp"
	"${UPSTREAM}/src/utils/SkBitmapHasher.cpp"
	"${UPSTREAM}/src/utils/SkBitSet.cpp"
	"${UPSTREAM}/src/utils/SkBoundaryPatch.cpp"
	"${UPSTREAM}/src/utils/SkCamera.cpp"
	"${UPSTREAM}/src/utils/SkCanvasStack.cpp"
	"${UPSTREAM}/src/utils/SkCanvasStateUtils.cpp"
	"${UPSTREAM}/src/utils/SkCondVar.cpp"
	"${UPSTREAM}/src/utils/SkCubicInterval.cpp"
	"${UPSTREAM}/src/utils/SkCullPoints.cpp"
	"${UPSTREAM}/src/utils/SkDashPath.cpp"
	"${UPSTREAM}/src/utils/SkDeferredCanvas.cpp"
	"${UPSTREAM}/src/utils/SkDumpCanvas.cpp"
	"${UPSTREAM}/src/utils/SkEventTracer.cpp"
	"${UPSTREAM}/src/utils/SkFrontBufferedStream.cpp"
	"${UPSTREAM}/src/utils/SkGatherPixelRefsAndRects.cpp"
	"${UPSTREAM}/src/utils/SkInterpolator.cpp"
	"${UPSTREAM}/src/utils/SkLayer.cpp"
	"${UPSTREAM}/src/utils/SkMatrix22.cpp"
	"${UPSTREAM}/src/utils/SkMatrix44.cpp"
	"${UPSTREAM}/src/utils/SkMD5.cpp"
	"${UPSTREAM}/src/utils/SkMeshUtils.cpp"
	"${UPSTREAM}/src/utils/SkNinePatch.cpp"
	"${UPSTREAM}/src/utils/SkNullCanvas.cpp"
	"${UPSTREAM}/src/utils/SkNWayCanvas.cpp"
	"${UPSTREAM}/src/utils/SkOSFile.cpp"
	"${UPSTREAM}/src/utils/SkParse.cpp"
	"${UPSTREAM}/src/utils/SkParseColor.cpp"
	"${UPSTREAM}/src/utils/SkParsePath.cpp"
	"${UPSTREAM}/src/utils/SkPatchGrid.cpp"
	"${UPSTREAM}/src/utils/SkPatchUtils.cpp"
	"${UPSTREAM}/src/utils/SkPathUtils.cpp"
	"${UPSTREAM}/src/utils/SkPDFRasterizer.cpp"
	"${UPSTREAM}/src/utils/SkPictureUtils.cpp"
	"${UPSTREAM}/src/utils/SkProxyCanvas.cpp"
	"${UPSTREAM}/src/utils/SkRTConf.cpp"
	"${UPSTREAM}/src/utils/SkSHA1.cpp"
	"${UPSTREAM}/src/utils/SkTextBox.cpp"
	"${UPSTREAM}/src/utils/SkTextureCompressor.cpp"
	"${UPSTREAM}/src/utils/SkTextureCompressor_ASTC.cpp"
	"${UPSTREAM}/src/utils/SkTextureCompressor_LATC.cpp"
	"${UPSTREAM}/src/utils/SkTextureCompressor_R11EAC.cpp"
	${target_specific_sources}
)

target_link_libraries(skia_osmand LINK_PUBLIC
	expat_osmand
	freetype2_osmand
	#harfbuzz_osmand
	png_osmand
	gif_osmand
	jpeg_osmand
)
	
if(CMAKE_TARGET_OS STREQUAL "linux")
	find_library(FONTCONFIG_LIBRARY fontconfig)
	target_link_libraries(skia_osmand LINK_PUBLIC
		pthread
		${FONTCONFIG_LIBRARY}
	)
endif()
